<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mmstart0312.com.webrtc_android.addUserInfoActivity"
    android:background="@android:color/holo_orange_dark"
    android:weightSum="1">

    <TextView
        android:text="@string/addUserInfo_label_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_addUserInfo"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_phonenumber"
            android:text="@string/phone"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_realphonenumber"
            android:layout_weight="1"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/first_name"
            android:layout_height="wrap_content"
            android:id="@+id/label_firstname"
            android:textSize="18sp"
            android:layout_width="120dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_firstname"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/last_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/label_lastname"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_lastname"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/street"
            android:layout_height="wrap_content"
            android:id="@+id/label_street"
            android:textSize="18sp"
            android:layout_width="120dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_street"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/apt"
            android:layout_height="wrap_content"
            android:id="@+id/label_apt"
            android:textSize="18sp"
            android:layout_width="120dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_apt"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/city"
            android:layout_height="wrap_content"
            android:id="@+id/label_city"
            android:textSize="18sp"
            android:layout_width="120dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_city"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:text="@string/state"
            android:layout_height="wrap_content"
            android:id="@+id/label_state"
            android:textSize="18sp"
            android:layout_width="120dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_state"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp">

        <TextView
            android:text="@string/zip"
            android:layout_height="wrap_content"
            android:id="@+id/label_zipcode"
            android:textSize="18sp"
            android:layout_width="120dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_zipcode"
            android:layout_weight="1"
            android:background="@drawable/rounded_textfield"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/btn_adduserinfo_submit"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"/>

        <TextView
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/btn_adduserinfo_cancel"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
